fix overflow

--- a/Frontend/src/styles/NotePage.module.css
+++ b/Frontend/src/styles/NotePage.module.css
@@ -7,7 +7,7 @@
 
 .note {
     height: 300px;
-    min-width: 100%;
+    width: max-content;
     transition: box-shadow .2s ease-in-out;
     cursor: pointer;
     margin: 10px;
